syntax = "proto3";

package commontype;

option java_multiple_files = true;
option java_package = "com.baidu.bifromq.type";
option java_outer_classname = "UserPropertiesProtos";

message StringPair{
  string key = 1;
  string value = 2;
}
message UserProperties{
  repeated StringPair userProperties = 11;
}
